--- a/seafile/docker-compose.yml
+++ b/seafile/docker-compose.yml
@@ -1,78 +1,138 @@
-version: '3'
-
-networks:
-  seaf-net:
+   networks:
+  seafile-net:
+    external: false
   extern:
-    external:
-      name: extern
-      
+    external: true
 services:
-  seaf-db:
-    image: mariadb:10.1
-    container_name: seaf-mysql
-    environment:
-      - MYSQL_ROOT_PASSWORD=DeinSicheresPasswort # Requested, set the root's password of MySQL service. unbedingt anpassen - ist das Standartpasswort zur DatenBank - muss bei Seafile und db identisch sein
-      - MYSQL_LOG_CONSOLE=true
-    volumes:
-      - ./app/db:/var/lib/mysql  # Requested, specifies the path to MySQL data persistent store.
+  seafile:
+    image: ${SEAFILE_IMAGE:-seafileltd/seafile-mc:12.0-latest}
+    container_name: seafile_app
     networks:
-      - seaf-net
-    labels:
-      com.centurylinklabs.watchtower.enable: true
-    restart: unless-stopped
-
-  seaf-memcached:
-    image: memcached:1.5.6
-    container_name: seaf-memcached
-    entrypoint: memcached -m 256
-    networks:
-      - seaf-net
-    labels:
-      com.centurylinklabs.watchtower.enable: true
-    restart: unless-stopped
-          
-  seaf-app:
-    image: seafileltd/seafile-mc:latest
-    container_name: seaf-app
-    networks:
-      seaf-net:
+      seafile-net:
       extern:
         aliases:
-          - seaf
+          - seaf7
     depends_on:
-      - seaf-db
-      - seaf-memcached
+      db:
+        condition: service_healthy
+      memcached:
+        condition: service_started
     expose:
       - "80"
       - "8000"
       - "8082"
       - "8080"
-#    ports:
-#      - 8080:8080 #Freigabe Port wegen MountDAVFS intern nötig
+    ports:
+      - 8080:8080 #Freigabe Port wegen MountDAVFS intern nötig
     volumes:
-     #WICHTIG: bei erstem Start nur die oberste Zeile aktivieren
-     #Ordner-Separierung kann dann nach zweiten Schritt beginnen
-     #vor zweitem Start erste Zeile auskommentieren und dafür die folgende Auskkommentierungen löschen
-      - ./app:/shared
-#      - ./app/logs:/shared/logs
-#      - ./app/nginx:/shared/nginx
-#      - ./app/seafile/ccnet:/shared/seafile/ccnet
-#      - ./app/seafile/conf:/shared/seafile/conf
-#      - ./app/seafile/seahub-data:/shared/seafile/seahub-data
-#      - /pfad/zum/datenspeicher/seafile-data:/shared/seafile/seafile-data
-      # Template ermöglicht Betrieb hinter Nginx-Proxy-Server
-      - ./nginx.template/seafile.nginx.conf.template:/templates/seafile.nginx.conf.template:ro
+      - ./install.template/nginx.template/seafile.nginx.conf.template:/templates/seafile.nginx.conf.template:ro
+      - ./data/app:/shared
+    #    nach ersten Start kann Ordner für Daten auf eine eigene HDD separiert werden  
+    #   - ./data/app/logs:/shared//logs
+    #   - ./data/app/nginx:/shared/nginx
+    #   - ./data/app/seafile/ccnet:/shared/seafile/ccnet
+    #   - ./data/app/seafile/conf:/shared/seafile/conf
+    #   - ./data/app/seafile/logs:/shared/seafile/logs
+    #   - ./data/app/seafile/seahub-data:/shared/seafile/seahub-data
+    #   - /mnt/hdd/seafile-data:/shared/seafile/seafile-data
     environment:
-      - DB_HOST=seaf-db
-      - DB_ROOT_PASSWD=DeinSicheresPasswort #unbedingt anpassen - ist das Standartpasswort zur DatenBank - muss bei Seafile und db identisch sein
-      - TIME_ZONE=Europe/Berlin
-      - SEAFILE_ADMIN_EMAIL=admin #unbedingt anpassen - ist der Standartnutzername bei einem Admin-Resret
-      - SEAFILE_ADMIN_PASSWORD=passwort #unbedingt anpassen - ist das Standartpasswort bei einem Admin-Resret
-      - SEAFILE_SERVER_HOSTNAME=domain.de # Domain bspw. seafile.dyndns.de
-      - VIRTUAL_HOST=domain.de # Domain bspw. seafile.dyndns.de
+      - DB_HOST=${SEAFILE_MYSQL_DB_HOST:-db}
+      - DB_PORT=${SEAFILE_MYSQL_DB_PORT:-3306}
+      - DB_USER=${SEAFILE_MYSQL_DB_USER:-seafile}
+      - DB_ROOT_PASSWD=${INIT_SEAFILE_MYSQL_ROOT_PASSWORD:-}
+      - DB_PASSWORD=${SEAFILE_MYSQL_DB_PASSWORD:?Variable is not set or empty}
+      - SEAFILE_MYSQL_DB_CCNET_DB_NAME=${SEAFILE_MYSQL_DB_CCNET_DB_NAME:-ccnet_db}
+      - SEAFILE_MYSQL_DB_SEAFILE_DB_NAME=${SEAFILE_MYSQL_DB_SEAFILE_DB_NAME:-seafile_db}
+      - SEAFILE_MYSQL_DB_SEAHUB_DB_NAME=${SEAFILE_MYSQL_DB_SEAHUB_DB_NAME:-seahub_db}
+      - TIME_ZONE=${TIME_ZONE:-Etc/UTC}
+      # - INIT_SEAFILE_ADMIN_EMAIL=${INIT_SEAFILE_ADMIN_EMAIL:-me@example.com}
+      # - INIT_SEAFILE_ADMIN_PASSWORD=${INIT_SEAFILE_ADMIN_PASSWORD:-asecret}
+      - SEAFILE_SERVER_HOSTNAME=${SEAFILE_SERVER_HOSTNAME:?Variable is not set or empty}
+      - SEAFILE_SERVER_PROTOCOL=${SEAFILE_SERVER_PROTOCOL:-http}
+      - SITE_ROOT=${SITE_ROOT:-/}
+      - NON_ROOT=${NON_ROOT:-false}
+      - JWT_PRIVATE_KEY=${JWT_PRIVATE_KEY:?Variable is not set or empty}
+      - SEAFILE_LOG_TO_STDOUT=${SEAFILE_LOG_TO_STDOUT:-false}
+      # - ENABLE_SEADOC=${ENABLE_SEADOC:-true}
+      # - SEADOC_SERVER_URL=${SEAFILE_SERVER_PROTOCOL:-http}://${SEAFILE_SERVER_HOSTNAME:?Variable is not set or empty}/sdoc-server
+      - VIRTUAL_HOST=${SEAFILE_SERVER_HOSTNAME:?Variable is not set or empty}
+      - VIRTUAL_NETWORK=${NGINX_NETWORK:?Variable is not set or empty}
+      - VIRTUAL_PORT=${NGINX_PORT:?Variable is not set or empty}
+      - LETSENCRYPT_HOST=${SEAFILE_SERVER_HOSTNAME:?Variable is not set or empty}
+    labels:
+      # caddy: ${SEAFILE_SERVER_PROTOCOL:-http}://${SEAFILE_SERVER_HOSTNAME:?Variable is not set or empty}
+      # caddy.reverse_proxy: "{{upstreams 80}}"
+      com.centurylinklabs.watchtower.enable: true
+    restart: unless-stopped
+    
+  
+  db:
+    image: ${SEAFILE_DB_IMAGE:-mariadb:10.11}
+    container_name: seafile-mysql
+    environment:
+      - MYSQL_ROOT_PASSWORD=${INIT_SEAFILE_MYSQL_ROOT_PASSWORD:-}
+      - MYSQL_LOG_CONSOLE=true
+      - MARIADB_AUTO_UPGRADE=1 # bereinigte einen Fehler in der datenbank nach Update
+            # 024-06-23 15:16:24 4 [ERROR] Incorrect definition of table mysql.column_stats: expected column 'hist_type' at position 9 to have type enum('SINGLE_PREC_HB','DOUBLE_PREC_HB','JSON_HB'), found type enum('SINGLE_PREC_HB','DOUBLE_PREC_HB').
+            # 2024-06-23 15:16:24 4 [ERROR] Incorrect definition of table mysql.column_stats: expected column 'histogram' at position 10 to have type longblob, found type varbinary(255).
+    volumes:
+      - "${SEAFILE_MYSQL_VOLUME:-/opt/seafile-mysql/db}:/var/lib/mysql"
+    networks:
+      - seafile-net
+    healthcheck:
+      test:
+        [
+          "CMD",
+          "/usr/local/bin/healthcheck.sh",
+          "--connect",
+          "--mariadbupgrade",
+          "--innodb_initialized",
+        ]
+      interval: 20s
+      start_period: 30s
+      timeout: 5s
+      retries: 10
+    labels:
+      com.centurylinklabs.watchtower.enable: true
+    restart: unless-stopped
+
+  memcached:
+    image: ${SEAFILE_MEMCACHED_IMAGE:-memcached:1.6.29}
+    container_name: seafile-memcached
+    entrypoint: memcached -m 256
+    networks:
+      - seafile-net
+    labels:
+      com.centurylinklabs.watchtower.enable: true
+    restart: unless-stopped
+
+  collabora:
+    image: ${COLLABORA_IMAGE:-collabora/code:24.04.5.1.1}
+    container_name: seafile-collabora
+    networks:
+      # - seafile-net
+      - extern
+    expose:
+      - 9980
+    cap_add:
+      - MKNOD
+    environment:
+      - DONT_GEN_SSL_CERT=true
+      # - server_name=collabora:9980 # ${SEAFILE_SERVER_HOSTNAME:?Variable is not set or empty}:${COLLABORA_PORT:-6232}
+      - TZ=${TIME_ZONE:-Europe/Berlin}
+      # - username=${COLLABORA_USERNAME:?Variable is not set or empty}
+      # - password=${COLLABORA_PASSWORD:?Variable is not set or empty}
+      - extra_params=--o:admin_console.enable=${COLLABORA_ENABLE_ADMIN_CONSOLE:-true}
+        --o:ssl.enable=false
+        --o:ssl.termination=true
+        --o:user_interface.mode=classic
+        --o:remote_font_config.url=${COLLABORA_REMOTE_FONT:-}
+        --o:logging.file[@enable]=${COLLABORA_ENABLE_FILE_LOGGING:-false}
+        --o:logging.file.property[0]=/opt/cool/logs/coolwsd.log
+      - VIRTUAL_HOST=doc.${SEAFILE_SERVER_HOSTNAME:?Variable is not set or empty}
       - VIRTUAL_NETWORK=extern
-      - VIRTUAL_PORT=80
-      - LETSENCRYPT_HOST=domain.de # Domain bspw. seafile.dyndns.de
+      - VIRTUAL_PORT=9980
+      - LETSENCRYPT_HOST=doc.${SEAFILE_SERVER_HOSTNAME:?Variable is not set or empty}
     labels:
       com.centurylinklabs.watchtower.enable: true
     restart: unless-stopped
