--- a/tools/.env
+++ b/tools/.env
@@ -4,6 +4,10 @@ PAHT_LETSENCRYPT=./data/acme
 MAIL_SSL=me@example.com
 NGINX_NETWORK=extern
 
+# Healthcheker
+NGINX_PORT_HEALTH=3001
+NGINX_URL_HEALTH=hc.example.de
+
 # Portainer
 PAHT_PORTAINER=./data/portainer
 NGINX_URL_PORTAINER=portainer.example.com
