--- a/seafile/.env
+++ b/seafile/.env
@@ -1,5 +1,5 @@
 SEAFILE_IMAGE=seafileltd/seafile-mc:12.0-latest
-SEAFILE_DB_IMAGE=mariadb:10.11
+SEAFILE_DB_IMAGE=mariadb:latest # 10.11
 SEAFILE_MEMCACHED_IMAGE=memcached:1.6.29
 
 SEAFILE_VOLUME=./data/app
