some changes in comments

--- a/tools/docker-compose.yml
+++ b/tools/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     ports:
       - 80:80
       - 443:443/tcp
-      # - 443:443/udp # später nötig für HTTP3 --> merken dann in wireguard Port ändern
+      # - 443:443/udp # später nötig für HTTP3 -- Protokoll aktuell noch im Teststadium --> merken dann in wireguard Port ändern
     volumes:
       - ${PAHT_NGINX:-./data/nginx}/certs:/etc/nginx/certs:ro
       - ${PAHT_NGINX:-./data/nginx}/conf:/etc/nginx/conf.d
@@ -24,7 +24,7 @@ services:
       - /var/run/docker.sock:/tmp/docker.sock:ro
     environment:
       - ENABLE_HTTP2=false
-      # - ENABLE_HTTP3=true
+      # - ENABLE_HTTP3=true # später nötig für HTTP3 -- Protokoll aktuell noch im Teststadium
     logging:
       driver: "local"
       options:
