Update auf Seafile 13.0
Updated environment variables for Seafile configuration, including image versions, storage paths, and database credentials.

--- a/seafile/.env
+++ b/seafile/.env
@@ -1,33 +1,103 @@
-SEAFILE_IMAGE=seafileltd/seafile-mc:12.0-latest
+#################################
+# Docker compose configurations #
+#################################
+COMPOSE_FILE='compose.yml,seafile-md-server.yml,collabora.yml' #noch in Test: ,seadoc.yml,thumbnail-server.yml
+COMPOSE_PATH_SEPARATOR=','
+
+## Images
+SEAFILE_IMAGE=seafileltd/seafile-mc:13.0-latest
 SEAFILE_DB_IMAGE=mariadb:latest # 10.11
-SEAFILE_MEMCACHED_IMAGE=memcached:1.6.29
+SEAFILE_REDIS_IMAGE=redis
+SEAFILE_CADDY_IMAGE=lucaslorentz/caddy-docker-proxy:2.9-alpine
+SEADOC_IMAGE=seafileltd/sdoc-server:2.0-latest
+NOTIFICATION_SERVER_IMAGE=seafileltd/notification-server:13.0-latest
+MD_IMAGE=seafileltd/seafile-md-server:13.0-latest
 
-SEAFILE_VOLUME=./data/app
-SEAFILE_MYSQL_VOLUME=./data/db 
+## Persistent Storage
+BASIC_STORAGE_PATH=./data
+SEAFILE_VOLUME=$BASIC_STORAGE_PATH/app
+SEAFILE_MYSQL_VOLUME=$BASIC_STORAGE_PATH/db
+SEAFILE_CADDY_VOLUME=$BASIC_STORAGE_PATH/caddy
+SEADOC_VOLUME=$BASIC_STORAGE_PATH/seadoc
 
-SEAFILE_MYSQL_DB_HOST=db
-INIT_SEAFILE_MYSQL_ROOT_PASSWORD=asecret
-SEAFILE_MYSQL_DB_USER=seafile
-SEAFILE_MYSQL_DB_PASSWORD=asecret
-
-TIME_ZONE=Europe/Berlin # Etc/UTC
-
-JWT_PRIVATE_KEY=long_random_string_upto_40_chars
-
+#################################
+#      Startup parameters       #
+#################################
 SEAFILE_SERVER_HOSTNAME=seafile.example.com
 SEAFILE_SERVER_PROTOCOL=https
+TIME_ZONE=Europe/Berlin # Etc/UTC
+JWT_PRIVATE_KEY=AuotogeneratedJWTPrivateKeyHereChangeIt
 
 NGINX_NETWORK=extern
 NGINX_PORT=80 
 
-INIT_SEAFILE_ADMIN_EMAIL=me@example.com
-INIT_SEAFILE_ADMIN_PASSWORD=change_me
+#####################################
+# Third-party service configuration #
+#####################################
 
+## Database
+SEAFILE_MYSQL_DB_HOST=db
+SEAFILE_MYSQL_DB_USER=seafile
+SEAFILE_MYSQL_DB_PASSWORD=AuotogeneratedJWTPrivateKeyHereChangeIt
+SEAFILE_MYSQL_DB_CCNET_DB_NAME=ccnet_db
+SEAFILE_MYSQL_DB_SEAFILE_DB_NAME=seafile_db
+SEAFILE_MYSQL_DB_SEAHUB_DB_NAME=seahub_db
+
+## Cache
+CACHE_PROVIDER=redis # or memcached   
+
+### Redis
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_PASSWORD=AuotogeneratedJWTPrivateKeyHereChangeIt
+
+### Memcached
+MEMCACHED_HOST=memcached
+MEMCACHED_PORT=11211
+
+######################################
+#        Initial variables           #
+# (Only valid in first-time startup) #
+######################################
+
+## Database root password, Used to create Seafile users
+INIT_SEAFILE_MYSQL_ROOT_PASSWORD=AuotogeneratedJWTPrivateKeyHereChangeIt
+
+## Seafile admin user
+INIT_SEAFILE_ADMIN_EMAIL=mail@example.com
+INIT_SEAFILE_ADMIN_PASSWORD=asecretpassword
+
+############################################
+# Additional configurations for extensions #
+############################################
+
+## Collabora service
 COLLABORA_IMAGE=collabora/code:latest # 24.04.5.1.1 # image of LibreOffice
 COLLABORA_PORT=9980 #6232 # expose port
 COLLABORA_USERNAME=user
-COLLABORA_PASSWORD=change_me
+COLLABORA_PASSWORD=asecretpassword
 COLLABORA_ENABLE_ADMIN_CONSOLE=false # enable admin console or not
 COLLABORA_REMOTE_FONT= # remote font url
 COLLABORA_ENABLE_FILE_LOGGING=false
-COLLABORA_PATH=./data/collabora # path of the collabora logs
+COLLABORA_PATH=$BASIC_STORAGE_PATH/collabora # path of the collabora logs
+
+## SeaDoc service
+ENABLE_SEADOC=true
+SEADOC_SERVER_URL=https://$SEAFILE_SERVER_HOSTNAME/sdoc-server
+
+## Notification
+ENABLE_NOTIFICATION_SERVER=false
+NOTIFICATION_SERVER_URL=
+
+## Seafile AI
+ENABLE_SEAFILE_AI=false
+SEAFILE_AI_LLM_TYPE=openai
+SEAFILE_AI_LLM_URL=
+SEAFILE_AI_LLM_KEY= # your llm key
+SEAFILE_AI_LLM_MODEL=gpt-4o-mini
+
+## Metadata server
+MD_FILE_COUNT_LIMIT=100000
+MD_CHECK_UPDATE_INTERVAL=30m
+MD_MAX_CACHE_SIZE=1GB
+MD_PORT=8084
