--- a/seafile/docker-compose.yml
+++ b/seafile/docker-compose.yml
@@ -6,16 +6,14 @@ networks:
 services:
   seafile:
     image: ${SEAFILE_IMAGE:-seafileltd/seafile-mc:12.0-latest}
-    container_name: seafile_app
+    container_name: seafile-app
     networks:
-      seafile-net:
-      extern:
-        aliases:
-          - seaf7
+      - seafile-net
+      - extern
     depends_on:
       db:
         condition: service_healthy
-      memcached:
+      redis:
         condition: service_started
     expose:
       - "80"
@@ -26,60 +24,78 @@ services:
     ports:
       - 8080:8080 #Freigabe Port wegen MountDAVFS intern nötig
     volumes:
-      # - ./install.template/nginx.template/seafile.nginx.conf.template:/templates/seafile.nginx.conf.template:ro
-      - ./data/app:/shared
-    #    nach ersten Start kann Ordner für Daten auf eine eigene HDD separiert werden
-    #  - ./data/app/logs:/shared/logs
-    #  - ./data/app/nginx:/shared/nginx
-    #  - ./data/app/seafile/ccnet:/shared/seafile/ccnet
-    #  - ./data/app/seafile/conf:/shared/seafile/conf
-    #  - ./data/app/seafile/logs:/shared/seafile/logs
-    #  - ./data/app/seafile/seahub-data:/shared/seafile/seahub-data
-    #  - /mnt/bighdd/seafile/seafile-data:/shared/seafile/seafile-data 
-    environment:
-      - DB_HOST=${SEAFILE_MYSQL_DB_HOST:-db}
-      - DB_PORT=${SEAFILE_MYSQL_DB_PORT:-3306}
-      - DB_USER=${SEAFILE_MYSQL_DB_USER:-seafile}
-      - DB_ROOT_PASSWD=${INIT_SEAFILE_MYSQL_ROOT_PASSWORD:-}
-      - DB_PASSWORD=${SEAFILE_MYSQL_DB_PASSWORD:?Variable is not set or empty}
+    #  - ${SEAFILE_VOLUME:-./data/app}:/shared
+    ## nach ersten kann das Daten-Volume in separaten Ordner ausgelagert werden
+      - /mnt/BigHDD/seafile-data:/shared/seafile/seafile-data
+      - ${SEAFILE_VOLUME:-./data/app}/logs:/shared/logs
+      - ${SEAFILE_VOLUME:-./data/app}/nginx:/shared/nginx
+      - ${SEAFILE_VOLUME:-./data/app}/seafile/ccnet:/shared/seafile/ccnet
+      - ${SEAFILE_VOLUME:-./data/app}/seafile/conf:/shared/seafile/conf
+      - ${SEAFILE_VOLUME:-./data/app}/seafile/logs:/shared/seafile/logs
+      - ${SEAFILE_VOLUME:-./data/app}/seafile/seahub-data:/shared/seafile/seahub-data
+    environment:     
+      ## Databasesektion
+      - SEAFILE_MYSQL_DB_HOST=${SEAFILE_MYSQL_DB_HOST:-db}
+      - SEAFILE_MYSQL_DB_PORT=${SEAFILE_MYSQL_DB_PORT:-3306}
+      - SEAFILE_MYSQL_DB_USER=${SEAFILE_MYSQL_DB_USER:-seafile}
+      - SEAFILE_MYSQL_DB_PASSWORD=${SEAFILE_MYSQL_DB_PASSWORD:?Variable is not set or empty}
       - SEAFILE_MYSQL_DB_CCNET_DB_NAME=${SEAFILE_MYSQL_DB_CCNET_DB_NAME:-ccnet_db}
       - SEAFILE_MYSQL_DB_SEAFILE_DB_NAME=${SEAFILE_MYSQL_DB_SEAFILE_DB_NAME:-seafile_db}
       - SEAFILE_MYSQL_DB_SEAHUB_DB_NAME=${SEAFILE_MYSQL_DB_SEAHUB_DB_NAME:-seahub_db}
+      ## allgemeine Einstellungen
       - TIME_ZONE=${TIME_ZONE:-Europe/Berlin}
-      # - INIT_SEAFILE_ADMIN_EMAIL=${INIT_SEAFILE_ADMIN_EMAIL:-me@example.com}
-      # - INIT_SEAFILE_ADMIN_PASSWORD=${INIT_SEAFILE_ADMIN_PASSWORD:-asecret}
       - SEAFILE_SERVER_HOSTNAME=${SEAFILE_SERVER_HOSTNAME:?Variable is not set or empty}
       - SEAFILE_SERVER_PROTOCOL=${SEAFILE_SERVER_PROTOCOL:-http}
       - SITE_ROOT=${SITE_ROOT:-/}
       - NON_ROOT=${NON_ROOT:-false}
       - JWT_PRIVATE_KEY=${JWT_PRIVATE_KEY:?Variable is not set or empty}
       - SEAFILE_LOG_TO_STDOUT=${SEAFILE_LOG_TO_STDOUT:-false}
-      # - ENABLE_SEADOC=${ENABLE_SEADOC:-true}
-      # - SEADOC_SERVER_URL=${SEAFILE_SERVER_PROTOCOL:-http}://${SEAFILE_SERVER_HOSTNAME:?Variable is not set or empty}/sdoc-server
+      ## URL Einstellungen NGINX / Reverse Proxy
       - VIRTUAL_HOST=${SEAFILE_SERVER_HOSTNAME:?Variable is not set or empty}
       - VIRTUAL_NETWORK=${NGINX_NETWORK:?Variable is not set or empty} # extern
       - VIRTUAL_PORT=${NGINX_PORT:?Variable is not set or empty} # 80
       - LETSENCRYPT_HOST=${SEAFILE_SERVER_HOSTNAME:?Variable is not set or empty}
+      ## Initialle Einrichtung (nur beim ersten Start relevant)
+      # - INIT_SEAFILE_MYSQL_ROOT_PASSWORD=${INIT_SEAFILE_MYSQL_ROOT_PASSWORD:-}
+      # - INIT_SEAFILE_ADMIN_EMAIL=${INIT_SEAFILE_ADMIN_EMAIL:-me@example.com}
+      # - INIT_SEAFILE_ADMIN_PASSWORD=${INIT_SEAFILE_ADMIN_PASSWORD:-asecret}
+      ## Cache Einstellungen
+      - CACHE_PROVIDER=${CACHE_PROVIDER:-redis}
+      - REDIS_HOST=${REDIS_HOST:-redis}
+      - REDIS_PORT=${REDIS_PORT:-6379}
+      - REDIS_PASSWORD=${REDIS_PASSWORD:-}
+      ## Erweiterungen
+      # - ENABLE_GO_FILESERVER=${ENABLE_GO_FILESERVER:-true}
+      # - ENABLE_SEADOC=${ENABLE_SEADOC:-true}
+      # - SEADOC_SERVER_URL=${SEAFILE_SERVER_PROTOCOL:-http}://${SEAFILE_SERVER_HOSTNAME:?Variable is not set or empty}/sdoc-server
+      # - ENABLE_NOTIFICATION_SERVER=${ENABLE_NOTIFICATION_SERVER:-false}
+      # - INNER_NOTIFICATION_SERVER_URL=${INNER_NOTIFICATION_SERVER_URL:-http://notification-server:8083}
+      # - NOTIFICATION_SERVER_URL=${NOTIFICATION_SERVER_URL:-${SEAFILE_SERVER_PROTOCOL:-http}://${SEAFILE_SERVER_HOSTNAME:?Variable is not set or empty}/notification}
+      # - ENABLE_SEAFILE_AI=${ENABLE_SEAFILE_AI:-false}
+      # - SEAFILE_AI_SERVER_URL=${SEAFILE_AI_SERVER_URL:-http://seafile-ai:8888}
+      # - SEAFILE_AI_SECRET_KEY=${JWT_PRIVATE_KEY:?Variable is not set or empty}
+      # - MD_FILE_COUNT_LIMIT=${MD_FILE_COUNT_LIMIT:-100000}
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:80 || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 10s
     labels:
-      # caddy: ${SEAFILE_SERVER_PROTOCOL:-http}://${SEAFILE_SERVER_HOSTNAME:?Variable is not set or empty}
-      # caddy.reverse_proxy: "{{upstreams 80}}"
       com.centurylinklabs.watchtower.enable: true
     restart: unless-stopped
-    
   
   db:
     image: ${SEAFILE_DB_IMAGE:-mariadb:10.11}
     container_name: seafile-mysql
+    networks:
+      - seafile-net
+    volumes:
+      - "${SEAFILE_MYSQL_VOLUME:-/opt/seafile-mysql/db}:/var/lib/mysql"
     environment:
       - MYSQL_ROOT_PASSWORD=${INIT_SEAFILE_MYSQL_ROOT_PASSWORD:-}
       - MYSQL_LOG_CONSOLE=true
       - MARIADB_AUTO_UPGRADE=1 # bereinigte einen Fehler in der datenbank nach Update
-            # 024-06-23 15:16:24 4 [ERROR] Incorrect definition of table mysql.column_stats: expected column 'hist_type' at position 9 to have type enum('SINGLE_PREC_HB','DOUBLE_PREC_HB','JSON_HB'), found type enum('SINGLE_PREC_HB','DOUBLE_PREC_HB').
-            # 2024-06-23 15:16:24 4 [ERROR] Incorrect definition of table mysql.column_stats: expected column 'histogram' at position 10 to have type longblob, found type varbinary(255).
-    volumes:
-      - "${SEAFILE_MYSQL_VOLUME:-/opt/seafile-mysql/db}:/var/lib/mysql"
-    networks:
-      - seafile-net
     healthcheck:
       test:
         [
@@ -97,39 +113,17 @@ services:
       com.centurylinklabs.watchtower.enable: true
     restart: unless-stopped
 
-  memcached:
-    image: ${SEAFILE_MEMCACHED_IMAGE:-memcached:1.6.29}
-    container_name: seafile-memcached
-    entrypoint: memcached -m 256
+  redis:
+    image: ${SEAFILE_REDIS_IMAGE:-redis}
+    container_name: seafile-redis
     networks:
       - seafile-net
-    labels:
-      com.centurylinklabs.watchtower.enable: true
-    restart: unless-stopped
-
-  collabora:
-    image: ${COLLABORA_IMAGE:-collabora/code:24.04.5.1.1}
-    container_name: seafile-collabora
-    networks:
-      - extern
-    expose:
-      - 9980
-    cap_add:
-      - MKNOD
+    command:
+      - /bin/sh
+      - -c
+      - redis-server --requirepass "$$REDIS_PASSWORD"
     environment:
-      - DONT_GEN_SSL_CERT=true
-      - TZ=${TIME_ZONE:-Europe/Berlin}
-      - extra_params=--o:admin_console.enable=${COLLABORA_ENABLE_ADMIN_CONSOLE:-true}
-        --o:ssl.enable=false
-        --o:ssl.termination=true
-        --o:user_interface.mode=classic
-        --o:remote_font_config.url=${COLLABORA_REMOTE_FONT:-}
-        --o:logging.file[@enable]=${COLLABORA_ENABLE_FILE_LOGGING:-false}
-        --o:logging.file.property[0]=/opt/cool/logs/coolwsd.log
-      - VIRTUAL_HOST=doc.${SEAFILE_SERVER_HOSTNAME:?Variable is not set or empty}
-      - VIRTUAL_NETWORK=extern
-      - VIRTUAL_PORT=9980
-      - LETSENCRYPT_HOST=doc.${SEAFILE_SERVER_HOSTNAME:?Variable is not set or empty}
+      - REDIS_PASSWORD=${REDIS_PASSWORD:-}
     labels:
       com.centurylinklabs.watchtower.enable: true
     restart: unless-stopped
