--- a/seafile/config.files.seafile/ccnet.conf
+++ b/seafile/config.files.seafile/ccnet.conf
@@ -1,3 +1,6 @@
 # NUR Service_URL auf https und ohne PortNummer ändern
 [General]
 SERVICE_URL = https://<Domain bspw. seafile.dyn.de>
+
+[Client]
+UNIX_SOCKET = /opt/seafile/ccnet.sock
